fix: images overflow again

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -94,11 +94,11 @@ section:nth-child(2n + 2) {
 }
 
 section .section-image {
-	width: calc(38rem + 5vw);
+	width: 100%;
 }
 
 .section-texts .section-title {
-	font-size: calc(2.8rem + .2vw);
+	font-size: calc(2.8rem + 0.2vw);
 }
 
 footer {
@@ -113,11 +113,11 @@ footer {
 }
 
 a {
-	transition: all .1s ease-in-out;
+	transition: all 0.1s ease-in-out;
 }
 
 a:hover {
-	opacity: .6;
+	opacity: 0.6;
 }
 
 @media screen and (min-width: 768px) {
@@ -134,7 +134,7 @@ a:hover {
 	header h1 {
 		font-size: calc(5rem + 1vw);
 	}
-	
+
 	header .buttons {
 		flex-flow: row;
 	}
@@ -158,11 +158,11 @@ a:hover {
 	}
 
 	section:last-child .section-image {
-		width: 60rem;
+		width: 45%;
 	}
 
 	section .section-texts {
-		max-width: 30rem;
+		max-width: 25%;
 	}
 
 	section h2 {
